[package]
name = "variant-ssl-sys"
version = "0.17.13"
license = "MIT"
description = "FFI bindings to OpenSSL variants such as BoringSSL / AWS-LC / Tongsuo"
repository = "https://github.com/G3-OSS/rust-variant-ssl"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]
links = "openssl"
build = "build/main.rs"
edition = "2021"
rust-version = "1.71.0"

[features]
vendored = ["dep:openssl-src"]
tongsuo = ["dep:tongsuo-src"]
boringssl = ["dep:bssl-sys"]
aws-lc = ["dep:aws-lc-sys"]
aws-lc-fips = ['dep:aws-lc-fips-sys']
bindgen = ["dep:bindgen", "aws-lc-sys?/bindgen"]

[dependencies]
libc = "0.2"
bssl-sys = { package = "bssl-cmake-sys", version = "0.1.2407220", optional = true }
aws-lc-sys = { version = "0.35.0", optional = true, features = ["ssl"] }
aws-lc-fips-sys = { version = "0.13.8", features = ["ssl", "bindgen"], optional = true }

[build-dependencies]
bindgen = { version = "0.72.0", optional = true }
cc = "1.0.61"
openssl-src = { version = "300.2.0", optional = true }
tongsuo-src = { version = "833", optional = true }
pkg-config = "0.3.9"
vcpkg = "0.2.8"

# We don't actually use metadeps for annoying reasons but this is still here for tooling
[package.metadata.pkg-config]
openssl = "1.1.0"
